kubernetes/apps/nextjs-docker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-docker-deployment
  namespace: dev
spec:
  selector:
    matchLabels:
      app: nextjs-docker
  template:
    metadata:
      labels:
        app: nextjs-docker
    spec:
      containers:
        - name: nextjs-docker
          image: 192.168.7.1:5000/nextjs-docker:0.0.1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
