kubernetes/apps/nextjs-docker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-docker
  namespace: dev
spec:
  selector:
    app: nextjs-docker
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
