kubernetes/apps/nextjs-docker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-docker-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: 70ld-ss-cert-issuer
  labels:
    name: nextjs-docker-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: nextjs-docker.70ld.home
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nextjs-docker-service
                port:
                  number: 80
  tls:
    - hosts:
        - nextjs-docker.70ld.home
      secretName: nextjs-docker-ingress-ss-cert
